--- a/index.html
+++ b/index.html
@@ -83,11 +83,26 @@
   </main>
 
   <script>
-    const linksData = [
-      {title:'N-LAM على فيسبوك', subtitle:'صفحة فيسبوك', href:'https://www.facebook.com/share/1DQ9SAVgJt/'},
-      {title:'N-LAM  Sessions (Telegram)', subtitle:'قناة تليجرام', href:'https://t.me/N_LAM239500'},
-      {title:'Welcome to N-LAM  (WhatsApp)', subtitle:'جروب واتساب', href:'https://chat.whatsapp.com/Hr7ZuctJynRL17goWqAxQf'}
-    ];
+const linksData = [
+  {
+    title: 'N-LAM على فيسبوك',
+    subtitle: 'صفحة فيسبوك',
+    href: 'https://www.facebook.com/share/1DQ9SAVgJt/',
+    icon: 'fa-brands fa-facebook' // أيقونة فيسبوك
+  },
+  {
+    title: 'N-LAM Sessions (Telegram)',
+    subtitle: 'قناة تليجرام',
+    href: 'https://t.me/N_LAM239500',
+    icon: 'fa-brands fa-telegram' // أيقونة تيليجرام
+  },
+  {
+    title: 'Welcome to N-LAM (WhatsApp)',
+    subtitle: 'جروب واتساب',
+    href: 'https://chat.whatsapp.com/Hr7ZuctJynRL17goWqAxQf',
+    icon: 'fa-brands fa-whatsapp' // أيقونة واتساب
+  }
+];
 
     let totalClicks = 0;
 
@@ -145,3 +160,4 @@
 
 </body>
 </html>
+
