--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <br>
 
-    <img src="WhatsApp Image 2025-11-16 at 04.34.57_4276e09c.jpg"
+    <img src="WhatsApp1.jpg"
          alt="QR Code"
          style="width:160px;margin:0 auto 15px;display:block;border-radius:12px;" />
 
@@ -160,4 +160,5 @@ const linksData = [
 
 </body>
 </html>
+
 
