Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
     <br>
 
-    <!-- <img src="WhatsApp1.jpg"
+    <img src="WhatsApp1.jpg"
          alt="QR Code"
-         style="width:160px;margin:0 auto 15px;display:block;border-radius:12px;" /> -->
+         style="width:160px;margin:0 auto 15px;display:block;border-radius:12px;" />
 
   </main>
 
@@ -160,6 +160,7 @@ const linksData = [
 
 </body>
 </html>
+
 
 
 
